# ZibraVDBForHoudini

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: build-custom.yml  build-labs.yml  build-package.yml  build.yml  check-houdini-versions.yml  on-push.yml
AssetResolver/: CMakeLists.txt  plugInfo.json.in
AssetResolver/src/: DecompressionHelper.h  PrecompiledHeader.h  ZibraVDBAssetResolver.cpp  ZibraVDBAssetResolver.h
AssetResolver/src/decompression/: DecompressionHelper.cpp  DecompressionHelper.h  DecompressionSequenceItem.cpp  DecompressionSequenceItem.h
AssetResolver/usd_plugins/ZibraVDBResolver/resources/: plugInfo.json
HDA/zibravdb_filecache.1.0.hda/: INDEX__SECTION
HDA/zibravdb_filecache.1.0.hda/labs_8_8Sop_1zibravdb__filecache_8_80.2/: CreateScript  DialogScript  ExtraFileOptions  MessageNodes  PythonModule
HDA/zibravdb_filecache.1.0.hda/labs_8_8Sop_1zibravdb__filecache_8_81.0/: DialogScript  PythonModule  Tools.shelf
HIP/: .gitignore  HDAs.hip  HDAs.md  zibravdb_example.hip
SDK/include/Zibra/: Foundation.h  FunctionCheck.h  Helpers.h  Math.h  Math3D.h  OnScopeExit.h  RHI.h  Result.h  Span.h  Stream.h  StreamWrapper.h  Version.h
ZibraVDBAssetResolver/: CMakeLists.txt
ZibraVDBAssetResolver/src/: DecompressionHelper.cpp  DecompressionHelper.h  PrecompiledHeader.h  ZibraVDBAssetResolver.cpp  ZibraVDBAssetResolver.h  ZibraVDBDecompressionManager.cpp  ZibraVDBDecompressionManager.h  resolver.cpp
ZibraVDBAssetResolver/usd_plugins/ZibraVDBResolver/resources/: plugInfo.json
ZibraVDBAssetResolver/usd_plugins/zibraVDBResolver/resources/: plugInfo.json
ZibraVDBAssetResolver/usd_plugins/zibraVDBResolver_linux/resources/: plugInfo.json
ZibraVDBAssetResolver/usd_plugins/zibraVDBResolver_mac/resources/: plugInfo.json
ZibraVDBAssetResolver/usd_plugins/zibraVDBResolver_win/resources/: plugInfo.json
actions/apple/: sign_and_notarize_dylib.sh
actions/houdini/: build_matrix.py  houdini_install_shared.py  houdini_version_query.py  install_houdini.py  is_installed.py  merge_macos_packages_and_notarize.ps1  merge_packages.ps1  notarize_macos_packages.ps1  requirements.txt  select_build.py
actions/install_houdini/: install_houdini.py  requirements.txt
assets/: OPcustomize
assets/config/Applications/: ZibraVDBAnalyticsPromptWindow.ui  ZibraVDBCopyLicenseToHQROOT.ui  ZibraVDBEnterHQROOTPath.ui  ZibraVDBMessageBoxOK.ui  ZibraVDBMessageBoxYesNo.ui  ZibraVDBPluginManagement.ui
assets/otls/: sop_Labs.zibravdb_filecache.0.2.hda  sop_labs.zibravdb_filecache.0.1.hda  zibravdb_filecache.0.2.hda
assets/otls/zibravdb_filecache.0.2.hda/: INDEX__SECTION
assets/otls/zibravdb_filecache.1.0.hda/: INDEX__SECTION  Sections.list
assetsPlatformSpecific/dso/usd/: ThirdPartyCopyrightNotices.txt
buildSteps/: post-build.ps1
common/: CMakeLists.txt  Globals.h  PrecompiledHeader.h
common/SOP/DecompressorManager/: DecompressorManager.h
common/bridge/: LibraryUtils.cpp  LibraryUtils.h  UpdateCheck.cpp
common/include/: Globals.h.in  Types.h  URI.h
common/include/bridge/: LibraryUtils.h
common/include/licensing/: LicenseManager.h
common/include/utils/: DecompressorManager.h  Helpers.h  MetadataHelper.h
common/licensing/: LicenseManager.cpp
common/src/: PrecompiledHeader.h  URI.cpp  main.cpp
common/src/bridge/: LibraryUtils.cpp  UpdateCheck.cpp
common/src/bridge/networking/: NetworkRequest.cpp  NetworkRequest.h
common/src/licensing/: InteractiveSessionDetector.cpp  InteractiveSessionDetector.h  LicenseManager.cpp
common/src/ui/: MessageBox.cpp  PluginManagementWindow.cpp
common/src/utils/: DecompressorManager.cpp  GAAttributesDump.cpp  GAAttributesDump.h  Helpers.cpp  MetadataHelper.cpp
common/ui/: PluginManagementWindow.cpp
common/utils/: DecompressorManager.cpp  GAAttributesDump.cpp  GAAttributesDump.h  Helpers.cpp  Helpers.h  MetadataHelper.cpp  MetadataHelper.h
scripts/: auto-format.ps1  build.ps1  clean-build.ps1  clean.ps1  configure.ps1  package.ps1
src/: .clang-format  Globals.h  Globals.h.in  PrecompiledHeader.h  main.cpp
src/GEO/: GU_PrimZibraVDB.cpp  GU_PrimZibraVDB.h
src/GUI/: GUI_ZibraVDBRender.cpp  GUI_ZibraVDBRender.h
src/LOP/: LOP_ZibraVDBCompressionMarker.cpp  LOP_ZibraVDBCompressionMarker.h  LOP_ZibraVDBDecompressor.cpp  LOP_ZibraVDBDecompressor.h  LOP_ZibraVDBImport.cpp  LOP_ZibraVDBImport.h  ZibraVDBOutputProcessor.cpp  ZibraVDBOutputProcessor.h  ZibraVDBPluginRegistry.cpp  ZibraVDBPluginRegistry.h
src/LOP/USD/: PrecompiledHeader.h  api.h  generatedSchema.usda  module.cpp  moduleDeps.cpp  plugInfo.json  tokens.cpp  tokens.h  wrapTokens.cpp  wrapZibraVDBVolume.cpp  zibraVDBVolume.cpp  zibraVDBVolume.h
src/ROP/: OStreamRAMWrapper.h  ROP_InspectVolume.cpp  ROP_InspectVolume.h  ROP_ZibraVDBCompressor.cpp  ROP_ZibraVDBCompressor.h
src/ROP/CompressorManager/: CompressorManager.cpp  CompressorManager.h  (+1 more)
src/SOP/: SOP_ZibraVDBDecompressor.cpp  SOP_ZibraVDBDecompressor.h  SOP_ZibraVDBUSDExport.cpp  SOP_ZibraVDBUSDExport.h
src/USD/ZibraVDBAssetResolver/: CMakeLists.txt  plugInfo.linux.json  plugInfo.mac.json  plugInfo.win.json
src/USD/ZibraVDBAssetResolver/src/: DecompressorManager.cpp  DecompressorManager.h  PrecompiledHeader.h  debugCodes.cpp  debugCodes.h  resolver.cpp  resolver.h
src/analytics/: Analytics.cpp  Analytics.h  OSInfo.cpp  OSInfo.h
src/bridge/: CompressionEngine.cpp  CompressionEngine.h  LibraryUtils.cpp  LibraryUtils.h  UpdateCheck.cpp  UpdateCheck.h
src/buildSteps/: post-build.ps1
src/licensing/: HoudiniLicenseManager.cpp  HoudiniLicenseManager.h  LicenseManager.cpp  LicenseManager.h  TrialManager.cpp  TrialManager.h
src/openvdb/: MathHelpers.cpp  MathHelpers.h  OpenVDBDecoder.cpp  OpenVDBDecoder.h  OpenVDBEncoder.cpp  OpenVDBEncoder.h
src/ui/: MessageBox.cpp  MessageBox.h  PluginManagementWindow.cpp  PluginManagementWindow.h
src/utils/: GAAttributesDump.cpp  GAAttributesDump.h  Helpers.cpp  Helpers.h  LibraryDownloadManager.cpp  LibraryDownloadManager.h  VDBCacheManager.cpp  VDBCacheManager.h  ZibraUSDUtils.cpp  ZibraUSDUtils.h
(+59 files in other folders)
